k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dilek-kumbarasi
  namespace: dilek-kumbarasi
spec:
  type: ClusterIP
  selector:
    app: dilek-kumbarasi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
