k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dilek-kumbarasi-ingress
  namespace: dilek-kumbarasi
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  rules:
    - host: dilek-kumbarasi.mindops.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dilek-kumbarasi
                port:
                  number: 80
